--- a/app/views/ftf/agreement/v2-0/accepted-terms-and-conditions.html
+++ b/app/views/ftf/agreement/v2-0/accepted-terms-and-conditions.html
@@ -15,7 +15,7 @@ Accept grant funding agreement
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <form method="post" action="accept-grant-funding-agreement">
+        <form method="post" action="/ftf/claim/v3-0/activity1?04-01=ready">
 
 
         <span class="govuk-caption-xl">Sign agreement</span>
