--- a/app/views/ftf/application/v3-0/check.html
+++ b/app/views/ftf/application/v3-0/check.html
@@ -46,7 +46,7 @@
   <div style="display: flex; justify-content: space-between; align-items: center;">
     <h2 class="govuk-heading-m" style="margin: 0;">Applicant details</h2>
     {% if (data['progress'] == "submitted") %}{% else %}
-    <a href="#" style="margin-left: auto;">Change (opens in a new tab)</a>
+    <a href="/_common/not-testing.html" style="margin-left: auto;">Change (opens in a new tab)</a>
     {% endif %}
   </div>
   
@@ -125,7 +125,7 @@
   <div style="display: flex; justify-content: space-between; align-items: center;">
     <h2 class="govuk-heading-m" style="margin: 0;">Business details</h2>
     {% if (data['progress'] == "submitted") %}{% else %}
-    <a href="#" style="margin-left: auto;">Change (opens in a new tab)</a>
+    <a href="/_common/not-testing.html" style="margin-left: auto;">Change (opens in a new tab)</a>
     {% endif %}
   </div>
   
