--- a/app/views/ftf/application/v3-0/email2.html
+++ b/app/views/ftf/application/v3-0/email2.html
@@ -189,7 +189,7 @@
 
               <br>
                                      
-              When you are ready to submit your application, <a href="activity1c?02-01=complete">upload your application forms and evidence </a> and submit your application.<br><br>
+              When you are ready to submit your application, <a href="activity1c?02-01=complete">upload your application forms and evidence</a>.<br><br>
 
             <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of these forms.
 
