--- a/app/views/ftf/application/v3-0/form/form2.html
+++ b/app/views/ftf/application/v3-0/form/form2.html
@@ -33,7 +33,7 @@
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
+        <span class="govuk-warning-text__assistive"></span>
         Do not upload handwritten and scanned copies or PDFs of these forms.
       </strong>
     </div>
