--- a/app/views/ftf/application/v3-0/letters/letters1.html
+++ b/app/views/ftf/application/v3-0/letters/letters1.html
@@ -54,7 +54,7 @@
     <div style="width: 630px; height: 202px; position: relative">
       <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
       <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
-      <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+      <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dashed"></div>
       <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
     
         <a href="letters3.html">
@@ -71,7 +71,7 @@
 </main>
 
 
-<a href="upload2?02=ready">
+<a href="/ftf/application/v3-0/upload?01=c&02=c&03=c&04=c&05=c&06=c&07=c&08=c&09=c&10=n">
   <button class="govuk-button" data-module="govuk-button">
     Continue
   </button>
