--- a/app/views/ftf/application/v3-0/letters/lettersq.html
+++ b/app/views/ftf/application/v3-0/letters/lettersq.html
@@ -79,7 +79,7 @@
       window.location.href = "letters1";
     } else if (selectedValue === "no") {
       // Redirect to page2.html
-      window.location.href = "/_common/not-testing.html";
+      window.location.href = "/ftf/application/v3-0/upload?01=c&02=c&03=c&04=c&05=c&06=c&07=c&08=c&09=c&10=c";
     }
   });
 </script>
