--- a/app/views/ftf/application/v3-0/linked/add.html
+++ b/app/views/ftf/application/v3-0/linked/add.html
@@ -84,7 +84,7 @@
 
 
 <div>
-  <a href="list?01=ready">
+  <a href="list?01=n&02=n">
     <button class="govuk-button" style="margin-bottom: 20px;">
       Save
     </button>
@@ -92,7 +92,7 @@
   
   <br>
 
-  <a href="upload3">
+  <a href="linkedq">
     <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
       Cancel
     </button>
