--- a/app/views/ftf/application/v3-0/linked/linkedq.html
+++ b/app/views/ftf/application/v3-0/linked/linkedq.html
@@ -88,7 +88,7 @@
 <br>
 
 
-<a href="/ftf/application/v2-1/activity2" id="continueButtonLink">
+<a href="#" id="continueButtonLink">
   <button class="govuk-button">
     Continue
   </button>
