--- a/app/views/ftf/application/v3-0/quotes/quotesq.html
+++ b/app/views/ftf/application/v3-0/quotes/quotesq.html
@@ -110,7 +110,7 @@
       window.location.href = "quotes2";
     } else if (selectedValue === "no") {
       // Redirect to page2.html
-      window.location.href = "upload6?05=complete";
+      window.location.href = "/ftf/application/v3-0/upload?01=c&02=c&03=c&04=c&05=c&06=c&07=n&08=n&09=n&10=n";
     }
   });
 </script>
