--- a/app/views/ftf/application/v3-0/upload-completed.html
+++ b/app/views/ftf/application/v3-0/upload-completed.html
@@ -112,7 +112,7 @@
   
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="/ftf/application/v3-0/financial/financial2a" aria-describedby="application-details-2-status">Financial accounts</a>
+                <a class="govuk-link govuk-task-list__link" href="/_common/not-testing.html" aria-describedby="application-details-2-status">Financial accounts</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 <strong class="govuk-tag govuk-tag--light-blue">
@@ -154,7 +154,7 @@
   
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="/ftf/application/v3-0/linked/list?01=c&02=n" aria-describedby="application-details-2-status">Linked business accounts</a>
+                <a class="govuk-link govuk-task-list__link" href="/_common/not-testing.html" aria-describedby="application-details-2-status">Linked business accounts</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 <strong class="govuk-tag govuk-tag--light-blue">
@@ -196,7 +196,7 @@
   
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="/ftf/application/v3-0/licences/licences3" aria-describedby="application-details-2-status">Licences and permissions</a>
+                <a class="govuk-link govuk-task-list__link" href="/_common/not-testing.html" aria-describedby="application-details-2-status">Licences and permissions</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 <strong class="govuk-tag govuk-tag--light-blue">
@@ -238,7 +238,7 @@
   
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="/ftf/application/v3-0/project/project3" aria-describedby="application-details-2-status">Project funding</a>
+                <a class="govuk-link govuk-task-list__link" href="/_common/not-testing.html" aria-describedby="application-details-2-status">Project funding</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 <strong class="govuk-tag govuk-tag--light-blue">
@@ -280,7 +280,7 @@
   
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="/ftf/application/v3-0/quotes/quotes4" aria-describedby="application-details-2-status">Quotes and tenders</a>
+                <a class="govuk-link govuk-task-list__link" href="/_common/not-testing.html" aria-describedby="application-details-2-status">Quotes and tenders</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 <strong class="govuk-tag govuk-tag--light-blue">
@@ -322,7 +322,7 @@
   
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="/ftf/application/v3-0/vat/vat3" aria-describedby="application-details-2-status">VAT in project costs</a>
+                <a class="govuk-link govuk-task-list__link" href="/_common/not-testing.html" aria-describedby="application-details-2-status">VAT in project costs</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 <strong class="govuk-tag govuk-tag--light-blue">
@@ -364,7 +364,7 @@
   
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="/ftf/application/v3-0/plans/plans3" aria-describedby="application-details-2-status">Plans and drawings</a>
+                <a class="govuk-link govuk-task-list__link" href="/_common/not-testing.html" aria-describedby="application-details-2-status">Plans and drawings</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 <strong class="govuk-tag govuk-tag--light-blue">
@@ -406,7 +406,7 @@
   
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="/ftf/application/v3-0/third/third3" aria-describedby="application-details-2-status">Third-party agreements</a>
+                <a class="govuk-link govuk-task-list__link" href="/_common/not-testing.html" aria-describedby="application-details-2-status">Third-party agreements</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 <strong class="govuk-tag govuk-tag--light-blue">
@@ -448,7 +448,7 @@
   
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="/ftf/application/v3-0/letters/letters3" aria-describedby="application-details-2-status">Letters of support</a>
+                <a class="govuk-link govuk-task-list__link" href="/_common/not-testing.html" aria-describedby="application-details-2-status">Letters of support</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 <strong class="govuk-tag govuk-tag--light-blue">
@@ -475,9 +475,38 @@
           </ul>
       </ol>
 
- 
+    
+    <script>
+        // Function to change tag state
+        function changeTagState(taskNumber) {
+            const tag = document.getElementById(`list-convictions-status-${taskNumber}`);
+            const currentState = tag.textContent.trim();
+    
+            // Define your logic to change the state
+            if (currentState === "Not started") {
+                tag.textContent = "In progress";
+            } else if (currentState === "In progress") {
+                tag.textContent = "Completed";
+            } else if (currentState === "Completed") {
+                tag.textContent = "Not started";
+            }
+    
+            // Store the state in memory (e.g., using localStorage)
+            localStorage.setItem(`task-${taskNumber}-status`, tag.textContent);
+        }
+    
+        // Retrieve and apply saved states
+        for (let i = 1; i <= 1; i++) {
+            const savedState = localStorage.getItem(`task-${i}-status`);
+            if (savedState) {
+                const tag = document.getElementById(`list-convictions-status-${i}`);
+                tag.textContent = savedState;
+            }
+        }
+    </script>
 
-      <a href="upload-completed?01=c&02=c&03=c&04=c&05=c&06=c&07=c&08=c&09=c&10=c">
+
+      <a href="summary">
         <button class="govuk-button">
           Continue
         </button>
