--- a/app/views/ftf/claim/v3-0/activity4.html
+++ b/app/views/ftf/claim/v3-0/activity4.html
@@ -190,13 +190,21 @@
               <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="read-declaration-status">Completed</strong>
             </li>
             <li class="govuk-prototype-kit-task-list__item">
-              <span class="govuk-prototype-kit-task-list__task-name">
-                  Claim outcome
-              </span>
-              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">In progress</strong>
-            </li>
+              <a href="activity5?claim=success" aria-describedby="eligibility-status" style="color: black; text-decoration: none;">
+                  Your claim outcome
+              </a>
+              <a href="activity5?claim=nosuccess">
+                  <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">
+                      In progress
+                  </strong>
+              </a>
+          </li>
+
+
           </ul>
         </li>
+
+
 
         <li>
           <h2 class="govuk-prototype-kit-task-list__section">
