--- a/app/views/ftf/claim/v3-0/email2.html
+++ b/app/views/ftf/claim/v3-0/email2.html
@@ -154,7 +154,7 @@
 
             <strong>What you need to do</strong><br><br>
 
-            <a href="activity1?04-01=ready">Download claim form</a><br>
+            <a href="/_common/not-testing.html">Download claim form</a><br>
 
             <br>
 
@@ -168,7 +168,7 @@
 
               <br>
                                      
-              When you are ready to submit your claim, <a href="activity2">upload your claim form and evidence</a> and submit your claim.<br><br>
+              When you are ready to submit your claim, <a href="activity2">upload your claim form and evidence</a>.<br><br>
 
             <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of this form.<br>
 
