--- a/app/views/ftf/claim/v3-0/index.html
+++ b/app/views/ftf/claim/v3-0/index.html
@@ -131,7 +131,7 @@
           <script>
             function navigateToPage() {
               // Replace 'page2.html' with the actual file or URL for page 2
-              window.location.href = 'email2.html';
+              window.location.href = '#';
             }
           </script>
           
