--- a/app/views/ftf/application/v3-0/form/form1.html
+++ b/app/views/ftf/application/v3-0/form/form1.html
@@ -33,7 +33,7 @@
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
+        <span class="govuk-warning-text__assistive"></span>
         Do not upload handwritten and scanned copies or PDFs of these forms.
       </strong>
     </div>
@@ -109,7 +109,7 @@
 
 <br><br><br>
  
-<a href="/ftf/application/v2-0/upload?01=ready">
+<a href="/ftf/application/v3-0/upload?01=n&02=n&03=n&04=n&05=n&06=n&07=n&08=n&09=n&10=n">
   <button class="govuk-button" data-module="govuk-button">
     Continue
   </button>
