--- a/app/views/ftf/application/v3-0/index.html
+++ b/app/views/ftf/application/v3-0/index.html
@@ -190,7 +190,7 @@
 
               <br>
                         
-              When you are ready to submit your application, <a href="/_common/not-testing.html">upload your application forms and evidence </a> and submit your application.<br><br>
+              When you are ready to submit your application, <a href="/_common/not-testing.html">upload your application forms and evidence</a>.<br><br>
 
             <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of these forms.
 
