--- a/app/views/ftf/claim/v3-0/upload3.html
+++ b/app/views/ftf/claim/v3-0/upload3.html
@@ -95,7 +95,7 @@
 
 
 
-<h3 class="govuk-heading-m" id="financial-evidence-section">Financial evidence (4 files)</h3>
+<h3 class="govuk-heading-m" id="financial-evidence-section">Financial evidence</h3>
 
 
 <p class="govuk-body">For example, invoices, receipts and bank statements (you can cross out other transactions)</p>
@@ -137,7 +137,7 @@
 <div style="width: 630px; height: 202px; position: relative">
   <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
   <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
-  <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+  <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dashed"></div>
   <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
     
     <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
@@ -160,7 +160,7 @@
   <div style="width: 630px; height: 202px; position: relative">
     <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
     <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
-    <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+    <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dashed"></div>
     <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
       
     <a href="upload4.html#visual-evidence-section">
@@ -184,7 +184,7 @@
   <div style="width: 630px; height: 202px; position: relative">
     <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
     <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
-    <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+    <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dashed"></div>
     <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
       
       <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
