--- a/app/views/ftf/claim/v3-0/upload4.html
+++ b/app/views/ftf/claim/v3-0/upload4.html
@@ -93,7 +93,7 @@
     <br><br>
 
 
-<h3 class="govuk-heading-m" id="financial-evidence-section">Financial evidence (4 files)</h3>
+<h3 class="govuk-heading-m" id="financial-evidence-section">Financial evidence</h3>
 
 <p class="govuk-body">For example, invoices, receipts and bank statements (you can cross out other transactions)</p>
 
@@ -134,7 +134,7 @@
 <div style="width: 630px; height: 202px; position: relative">
   <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
   <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
-  <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+  <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dashed"></div>
   <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
     
     <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
@@ -148,7 +148,7 @@
 <hr style="margin: 50px 0;">
 
 <div>
-  <h3 class="govuk-heading-m" id="visual-evidence-section">Visual evidence (4 files)</h3>
+  <h3 class="govuk-heading-m" id="visual-evidence-section">Visual evidence</h3>
 
   <p class="govuk-body">For example, photos and videos</p>
   
@@ -185,7 +185,7 @@
   <div style="width: 630px; height: 202px; position: relative">
     <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
     <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
-    <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+    <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dashed"></div>
     <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
       
 
@@ -208,7 +208,7 @@
   <div style="width: 630px; height: 202px; position: relative">
     <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
     <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
-    <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
+    <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dashed"></div>
     <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
       
       <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
