FTF content updates

--- a/app/views/ftf/agreement/v2-0/accept-grant-funding-agreement.html
+++ b/app/views/ftf/agreement/v2-0/accept-grant-funding-agreement.html
@@ -50,7 +50,7 @@ Accept grant funding agreement
 
         {% if data['progress'] == "submitted" %}
 
-        <a href="activity">
+        <a href="activity?03-02=complete">
           <button class="govuk-button" data-module="govuk-button">
             Continue
           </button>
